@startuml sample

hide circle
skinparam linetype ortho

entity "perusahaan" as perusahaan {
    *id : int <<auto>>
    --
    nama : varchar(100)
}

entity "user" as user {
    *id : int <<auto>>
    --
    id_perusahaan : int <<FK>> : NULL
    id_firebase : varchar(200) : NULL
    nama : varchar(100)
    email : varchar(100)
    super_user : bool
}

entity "rekening" as rekening {
    *id : int <<auto>>
    --
    id_perusahaan : int <<FK>>
    nama : varchar(100)
    icon : varchar(100)
    saldo : decimal(19, 4)
}

entity "jenis_pengeluaran_pemasukan" as jenis_pengeluaran_pemasukan {
    *id : int <<auto>>
    --
    id_perusahaan : int <<FK>>
    nama : varchar(100)
    icon : varchar(100)
    pengeluaran : bool
}

entity "pengeluaran_pemasukan" as pengeluaran_pemasukan {
    *id : int <<auto>>
    --
    id_perusahaan : int <<FK>>
    id_user_create : int <<FK>>
    id_user : int <<FK>>
    id_jenis_pengeluaran_pemasukan : int <<FK>>
    id_rekening : int <<FK>>
    tanggal : datetime
    nilai : decimal(19, 4)
    catatan : varchar(500)
    pengeluaran : bool
}

entity "hutang_piutang" as hutang_piutang {
    *id : int <<auto>>
    --
    id_perusahaan : int <<FK>>
    id_user_create : int <<FK>>
    id_rekening : int <<FK>>
    tanggal : datetime
    tanggal_tempo : datetime
    nilai : decimal(19, 4)
    catatan : varchar(500)
    hitang : bool
}

entity "hutang_piutang_pembayaran" as hutang_piutang_pembayaran {
    *id : int <<auto>>
    --
    id_perusahaan : int <<FK>>
    id_hutang_piutang : int <<FK>>
    id_user_create : int <<FK>>
    id_rekening : int <<FK>>
    tanggal : datetime
    nilai : decimal(19, 4)
    catatan : varchar(500)
    hitang : bool
}

entity "mutasi_rekening" as mutasi_rekening {
    *id : int <<auto>>
    --
    id_user_create : int <<FK>>
    id_perusahaan : int <<FK>>
    id_rekening_dari : int <<FK>>
    id_rekening_tujuan : int <<FK>>
    tanggal : datetime
    nilai : decimal(19, 4)
    catatan : varchar(500)
}

user ||--o| perusahaan
rekening }o--|| perusahaan
jenis_pengeluaran_pemasukan }o--|| perusahaan
jenis_pengeluaran_pemasukan }o--|| perusahaan
pengeluaran_pemasukan }o--|| perusahaan
pengeluaran_pemasukan }o--|| user
pengeluaran_pemasukan }o--|| user
pengeluaran_pemasukan }o--|| jenis_pengeluaran_pemasukan
pengeluaran_pemasukan }o--|| rekening
hutang_piutang }o--|| perusahaan
hutang_piutang }o--|| user
hutang_piutang }o--|| rekening
hutang_piutang_pembayaran }o--|| perusahaan
hutang_piutang_pembayaran }o--|| hutang_piutang
hutang_piutang_pembayaran }o--|| user
hutang_piutang_pembayaran }o--|| rekening
mutasi_rekening }o--|| user
mutasi_rekening }o--|| perusahaan
mutasi_rekening }o--|| rekening
mutasi_rekening }o--|| rekening

@enduml